chore: add login with account endpoint
