# internal/modules/auth/auth.controller.go
@@ -3,17 +3,19 @@ package auth
 import (
 	"net/http"
 
+	"github.com/1111mp/gin-app/config"
 	"github.com/1111mp/gin-app/internal/dto"
 	"github.com/1111mp/gin-app/pkg/errors"
 	"github.com/gin-gonic/gin"
 )
 
 type AuthController struct {
+	cfg         config.Config
 	authService AuthService
 }
 
-func NewAuthController(authService AuthService) *AuthController {
-	return &AuthController{authService}
+func NewAuthController(cfg config.Config, authService AuthService) *AuthController {
+	return &AuthController{cfg, authService}
 }
 
 // Login godoc
@@ -45,6 +47,48 @@ func (a *AuthController) Login(c *gin.Context) {
 	}
 
 	c.Redirect(http.StatusFound, redirectURL)
+}
+
+// LoginWithAccount godoc
+// @Summary     Login with account
+// @Description Login with account
+// @ID          AuthLoginWithAccount
+// @Tags        Auth
+// @Accept      json
+// @Produce     json
+// @Param       data body dto.AuthLoginWithAccountDto true "Login data"
+// @Success     302 {string} string "Redirect to login page"
+// @Failure     400 {object} errors.APIError "Bad request (invalid params)"
+// @Failure     500 {object} errors.APIError "Internal server error"
+// @Router      /api/v1/auth/login-with-account [post]
+func (a *AuthController) LoginWithAccount(c *gin.Context) {
+	ctx := c.Request.Context()
+
+	var dto dto.AuthLoginWithAccountDto
+	if err := c.ShouldBindJSON(&dto); err != nil {
+		c.Error(
+			errors.NewAPIError(
+				http.StatusBadRequest,
+				err.Error(),
+			),
+		)
+		return
+	}
+
+	token, err := a.authService.LoginWithAccount(ctx, dto)
+	if err != nil {
+		c.Error(err)
+		return
+	}
+
+	// set cookie
+	c.SetCookie(a.cfg.HTTP().CookieName, token, 3600, "/", "", true, true)
+
+	if dto.RedirectURL != "" {
+		c.Redirect(http.StatusFound, dto.RedirectURL)
+	} else {
+		c.Redirect(http.StatusFound, "/")
+	}
 }
 
 // GithubCallback -.
